Refactor: controller & frontend implementation